Api service classes were created in order to define the API calls behavior.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,11 +30,15 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
 
-            buildConfigField 'String', 'THEMOVIEDB_API_URL', "\"https://api.themoviedb.org/3/\""
+            buildConfigField 'String', 'TMDB_API_KEY', TMDB_API_KEY
+            buildConfigField 'String', 'TMDB_API_URL', "\"https://api.themoviedb.org/3/\""
+            buildConfigField 'String', 'TMDB_BASE_IMAGES_URL', "\"https://image.tmdb.org/t/p/\""
         }
 
         debug {
-            buildConfigField 'String', 'THEMOVIEDB_API_URL', "\"https://api.themoviedb.org/3/\""
+            buildConfigField 'String', 'TMDB_API_KEY', TMDB_API_KEY
+            buildConfigField 'String', 'TMDB_API_URL', "\"https://api.themoviedb.org/3/\""
+            buildConfigField 'String', 'TMDB_BASE_IMAGES_URL', "\"https://image.tmdb.org/t/p/\""
         }
     }
     compileOptions {
