--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,7 +57,6 @@ dependencies {
     implementation 'com.google.android.material:material:1.5.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
@@ -91,4 +90,17 @@ dependencies {
     kapt "com.google.dagger:hilt-android-compiler:2.37"
     implementation "androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha03"
     kapt "androidx.hilt:hilt-compiler:1.0.0"
+
+    //Test
+    testImplementation 'org.jetbrains.kotlin:kotlin-test'
+    testImplementation("org.junit.platform:junit-platform-launcher:1.7.1")
+    testImplementation("junit:junit:4.13.2")
+    testImplementation('androidx.test:core:1.4.0')
+    testImplementation("org.mockito:mockito-core:3.10.0")
+    testImplementation("org.mockito.kotlin:mockito-kotlin:3.2.0")
+    testImplementation 'org.mockito:mockito-inline:3.10.0'
+    testImplementation 'org.mockito:mockito-core:3.10.0'
+    testImplementation "org.powermock:powermock-module-junit4:2.0.2"
+    testImplementation 'com.nhaarman.mockitokotlin2:mockito-kotlin:2.2.0'
+
 }
