--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,13 +32,13 @@ android {
 
             buildConfigField 'String', 'TMDB_API_KEY', TMDB_API_KEY
             buildConfigField 'String', 'TMDB_API_URL', "\"https://api.themoviedb.org/3/\""
-            buildConfigField 'String', 'TMDB_BASE_IMAGES_URL', "\"https://image.tmdb.org/t/p/\""
+            buildConfigField 'String', 'TMDB_BASE_IMAGES_URL', "\"https://image.tmdb.org/t/p/w500\""
         }
 
         debug {
             buildConfigField 'String', 'TMDB_API_KEY', TMDB_API_KEY
             buildConfigField 'String', 'TMDB_API_URL', "\"https://api.themoviedb.org/3/\""
-            buildConfigField 'String', 'TMDB_BASE_IMAGES_URL', "\"https://image.tmdb.org/t/p/\""
+            buildConfigField 'String', 'TMDB_BASE_IMAGES_URL', "\"https://image.tmdb.org/t/p/w500\""
         }
     }
     compileOptions {
@@ -90,6 +90,10 @@ dependencies {
     kapt "com.google.dagger:hilt-android-compiler:2.37"
     implementation "androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha03"
     kapt "androidx.hilt:hilt-compiler:1.0.0"
+
+    // Glide
+    implementation 'com.github.bumptech.glide:glide:4.13.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.13.0'
 
     //Test
     testImplementation 'org.jetbrains.kotlin:kotlin-test'
