--- a/app/build.gradle
+++ b/app/build.gradle
@@ -95,6 +95,9 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.13.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.13.0'
 
+    // Security
+    implementation "androidx.security:security-crypto:1.1.0-alpha03"
+
     //Test
     testImplementation 'org.jetbrains.kotlin:kotlin-test'
     testImplementation("org.junit.platform:junit-platform-launcher:1.7.1")
